add bootstrap, add js function for user to get information by clicking on name

--- a/index.html
+++ b/index.html
@@ -32,15 +32,20 @@
           </div>
         </div>
 
-       <button type="submit" class="btn btn-secondary" id="add">Add!</button>
-      <div class="name">
-      </div>
-      <div class="info">
-        <ul>
-          <li class="address"></li>
-          <li class="phone"></li>
-          <li class="email"></li>
-        </ul>
+        <button type="submit" class="btn btn-secondary" id="add">Add!</button>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="name">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="info">
+              <p class="address"></p>
+              <p class="phone"></p>
+              <p class="email"></p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
